[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-prior"
version = "0.1.0"
description = "NumPyro/JAX DP-GMM empirical prior with asymmetric observation errors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpyro>=0.15.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["archiveprior*"]
